--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,9 +7,6 @@
 nav {
     background-color:  darkblue;
     padding: 10px;
-}
-
-nav ul {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -41,6 +38,10 @@ aside {
     background-color: #f4f4f4;
     color: #333;
 }
+aside img {
+    width: 200px;
+    height: auto;
+}
 
 h1 {
     color: darkblue;
@@ -51,19 +52,17 @@ p {
 }
 
 main img {
-    width: 200px;
+    width: 150px;
     height: auto;
 }
 
 footer {
     padding: 30px;
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-top: 10px;
+    margin-top: 15px;
     border-top: 20px;
     text-align: center;
+    border-top: solid 1px white;
     background-color: darkblue;
     color: white;
 }
