--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -115,6 +115,9 @@ main .history-section h2 {
     position: absolute;
     top: 20px;
     transform: translateX(-50%);
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
 main  .history-section img {
     width: 300px;
@@ -149,13 +152,16 @@ footer {
     justify-content: space-between;
     align-items: center; 
 }
-footer p {
+footer p, 
+footer a {
     margin: 0;
     font-size: 14px;
     color: var(--secondary-color);
+    font-family: 'Figtree', sans-serif;
     justify-self: center;
     text-align: center;
     flex: 1;
+    text-decoration: none;
 }
 footer .sociallinks {
     justify-self: end;
@@ -173,3 +179,138 @@ footer .sociallinks img:hover {
 footer .sociallinks a {
     text-decoration: none;
 }
+
+.company-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+    padding: 50px 100px;
+    background-color: var(--secondary-color);
+}
+.company-info .info {
+    flex: 1;
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    font-size: 14px;
+    font-family: 'Figtree', sans-serif;
+}
+.company-info h2 {
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+.company-info .map {
+    flex: 1;
+}
+.map iframe {
+    width: 100%;
+    height: 300px;
+    border: none;
+}
+main .employees {
+    background-color: var(--accent1-color);
+    padding: 50px 100px;
+}
+.employees h2 {
+    margin: 20px 0;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+.employees .profiles {
+    display: flex;
+    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
+}
+.employees .profile {
+    flex: 1;
+    height: 300px;
+    position: relative;
+}
+.employees .profile img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.profile p {
+    font-size: 16px;
+    font-weight: 600;
+    font-family: 'Figtree', sans-serif;
+}
+
+/* Contact Form */
+.contact-form {
+    padding: 50px 100px;
+    background-color: var(--secondary-color);
+}
+.contact-form h2 {
+    margin: 10px 0;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+.contact-form p {
+    font-size: 16px;
+    font-family: 'Figtree', sans-serif;
+    justify-self: center;
+    margin-bottom: 20px;
+}
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+.contact-form input {
+    padding: 15px 10px;
+    font-size: 16px;
+    font-family: 'Figtree', sans-serif;
+    border: none;
+}
+.contact-form .radio-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    font-size: 16px;
+    font-family: 'Figtree', sans-serif;
+}
+.contact-form .radio-group p {
+    font-size: 16px;
+    font-family: 'Figtree', sans-serif;
+    justify-self: center;
+    margin-bottom: 10px;
+}
+.contact-form textarea {
+    padding: 15px 10px;
+    font-size: 16px;
+    font-family: 'Figtree', sans-serif;
+    border: none;
+    height: 200px;
+}
+.contact-form .checkbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+.contact-form button {
+    column-span:  1 / -1;
+    padding: 20px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-family: 'Figtree', sans-serif;
+}
+
